--- a/src/components/color-text/color-text.pug
+++ b/src/components/color-text/color-text.pug
@@ -3,9 +3,9 @@ mixin color-text(options = { })
     const {
       title = '',
       text = '',
-      size =''
+      size ='14'
     } = options 
-    const sizeClass = `color-text_${size}`
+    const sizeClass = `color-text_size-${size}`
   section(class='color-text ' + sizeClass)
     div.color-text__title=title 
     div.color-text__subTitle!=text 
