--- a/src/components/drop-down/drop-down.scss
+++ b/src/components/drop-down/drop-down.scss
@@ -21,7 +21,7 @@
     border-radius: 4px 4px 0px 0px;
 
     width: 100%;
-    background: url(/img/arrow-down.svg) no-repeat 97% 40%;
+    background: url(./img/arrow-down.svg) no-repeat 97% 40%;
   }
   &__titleBtn-img {
     margin-right: 9px;
