--- a/src/components/room-search/room-search.pug
+++ b/src/components/room-search/room-search.pug
@@ -17,7 +17,7 @@ mixin room-search(title)
     div.room-search__item 
       include ../buttons/buttons.pug
       +buttons({
-        btnSwitch:'btn-Form',
+        modifer:'form',
         text:'подобрать номер',
         href:'search-room.html'
       })
