--- a/src/pages/ui-kit/cards/cards.pug
+++ b/src/pages/ui-kit/cards/cards.pug
@@ -23,8 +23,8 @@ html
           +account-registration('Регистрация аккаунта')
       div.cards__centre-colum
         div.cards__centre-colum-item
-          include ../../../components/form-to-book/form-to-book.pug
-          +form-to-book()
+          include ../../../components/price-room/price-room.pug
+          +price-room()
         div.cards__centre-colum-item
           include ../../../components/sign-in/sign-in.pug
           +sign-in()
