--- a/src/pages/ui-kit/form-elements/form-elements.scss
+++ b/src/pages/ui-kit/form-elements/form-elements.scss
@@ -20,7 +20,7 @@
   max-width: 1440px;
   padding: 174px 141px 146px 140px;
   margin: 0px auto;
-  background: url(../../../img/main-logo.svg)no-repeat 30px 62px;
+  background: url(./../../img/main-logo.svg)no-repeat 30px 62px;
   &__row {
     display: flex;
   }
