--- a/src/pages/web/room-details/room-details.pug
+++ b/src/pages/web/room-details/room-details.pug
@@ -80,7 +80,7 @@ html
                 div.room-details__regulations-cancel-title Отмена
                 div.room-details__regulations-cancel-text Бесплатная отмена в течение 48 ч. После этого при отмене не позднее чем за 5 дн. до прибытия вы получите полный возврат за вычетом сбора за услуги.
         div.room-details__description-right
-          include ../../../components/form-to-book/form-to-book.pug
-          +form-to-book()
+          include ../../../components/price-room/price-room.pug
+          +price-room()
       include ../../../components/footer/footer.pug
 
