--- a/src/components/buttons/buttons.pug
+++ b/src/components/buttons/buttons.pug
@@ -2,18 +2,11 @@ mixin buttons(options = {})
   -
     const {
       text = 'CLICK ME',
-      btnSwitch = 'withBackColor',
       href = '#',
-      isWithBorderHead = false,
-      isFormHead = false,
+      modifer = ''
     } = options;
-    let className = ' ';
 
-    if(isWithBorderHead) className = 'btn-with-border_head';
-    if(isFormHead) className = 'btn-Form_head';
+    let classModifer = modifer? ' btn_'+modifer : '';
 
-  case btnSwitch
-    when 'withBackColor': button.btnWithBackColor=text
-    when 'withBorder': a(class='btn-with-border '+className href='main-sign-in.html')=text
-    when 'justBtn':  button.btnJustName=text
-    when 'btn-Form':  a(class='btn-Form '+className  href=href)=text
+  a(class='btn'+classModifer href=href)=text 
+
