--- a/src/components/color-text/color-text.scss
+++ b/src/components/color-text/color-text.scss
@@ -1,6 +1,31 @@
 .color-text {
   display: flex;
   margin-bottom: 51px;
+
+  &_size-24 {
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 28px;
+  }
+
+  &_size-19 {
+    font-weight: bold;
+    font-size: 19px;
+    line-height: 25px;
+  }
+  
+  &_size-12 {
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 12px;
+    text-transform: uppercase;
+  }
+
+  &_size-14 {
+    font-size: 14px;
+    line-height: 21.9px
+  }
+
   &__title {
     color: rgba(31, 32, 65, 0.25);
     font-weight: 400;
@@ -9,29 +34,8 @@
     justify-content: flex-end;
     text-align: end
   }
-  &__subTitle {
+  
 
-  }
-
+  &__subTitle {}
 }
 
-.color-text_h1{
-  font-weight: bold;
-  font-size: 24px;
-  line-height: 28px;  
-}
-.color-text_h2{
-  font-weight: bold;
-  font-size: 19px;
-  line-height: 25px;
-}
-.color-text_h3{
-  font-weight: bold;
-  font-size: 12px;
-  line-height: 12px;
-  text-transform: uppercase;
-}
-.color-text_body{
-  font-size: 14px;
-  line-height: 21.9px
- }
