--- a/src/components/pagination/pagination.scss
+++ b/src/components/pagination/pagination.scss
@@ -17,11 +17,11 @@
     }
 
     &_next {
-      background: url(/img/arrow-forward.png) no-repeat center, linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%);
+      background: url('./img/arrow-forward.png') no-repeat center, linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%);
       text-indent: -62500rem;
 
       &:hover {
-        background: url(/img/arrow-forward.png) no-repeat center,
+        background: url('./img/arrow-forward.png') no-repeat center,
           linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
       }
     }
