--- a/src/components/price-room/price-room.scss
+++ b/src/components/price-room/price-room.scss
@@ -1,5 +1,5 @@
-@import '../text-pay-and-number/text-pay-and-number.scss';
-.form-to-book {
+@import '../price-and-number/price-and-number.scss';
+.price-room {
   border: 1px solid rgba(0, 0, 0, 0.12);
   box-sizing: border-box;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
