--- a/src/components/rate-btn/rate-btn.pug
+++ b/src/components/rate-btn/rate-btn.pug
@@ -1,17 +1,17 @@
-mixin rate-btn(options={})
+mixin rate-btn(options = {})
   - 
     const {
       blockNumber = 0,
       checkedStarIndex = 0,
     } = options;
 
-  div(class="rating")
+  div(class=["rating"])
     - for(let i = 5; i >= 1; i -= 1) {
       input(type="radio"
-        class="rating__input"
+        class=["rating__input"]
         name=`rating-${blockNumber}`
         value=i
         checked=(checkedStarIndex === i))
-      p(class="rating__image-of-star"
+      p(class=["rating__image-of-star"]
         title=`Оценка «${i}»`)
-    - } 
+    - }
