--- a/src/components/rate-btn/rate-btn.scss
+++ b/src/components/rate-btn/rate-btn.scss
@@ -20,14 +20,14 @@
     }
 
     & + .rating__image-of-star::before {
-      content: '';
+      content: 'star_border';
       width: 1.5rem;
       height: 1.5rem;
       display: flex;
       align-items: center;
       text-align: center;
       position: absolute;
-      background: url("/img/star_border.svg") no-repeat 1px 1px;
+      background: url("./img/star_border.svg") no-repeat 1px 1px;
       background-clip: text;
       -webkit-text-fill-color: transparent;
       font-family: Material Icons;
@@ -35,19 +35,20 @@
       line-height: 1.25rem;
     }
     &:checked ~ .rating__image-of-star::after {
-      content: '';
+      content: 'star';
       width: 1.5rem;
       height: 1.5rem;
       display: flex;
       align-items: center;
       text-align: center;
       position: absolute;
-      background: url("/img/star.svg") no-repeat 1px 1px;
+      background: url("./img/star.svg") no-repeat 1px 1px;
       background-clip: text;
       -webkit-text-fill-color: transparent;
       font-family: Material Icons;
       font-size: 1.5rem;
       line-height: 1.25rem;
+
     }
   }
 
@@ -67,4 +68,3 @@
     }
   }
 }
-
