--- a/src/components/rich-checkbox-btn/rich-checkbox-btn.scss
+++ b/src/components/rich-checkbox-btn/rich-checkbox-btn.scss
@@ -32,7 +32,7 @@
     }
     &:checked {
       &::before {
-        background: url("/img/Vector.svg") no-repeat 50%;
+        background: url("./img/Vector.svg") no-repeat 50%;
         border-color: #bc9cff;
       }
     }
