--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -9,7 +9,7 @@
   margin: 0px auto;
   padding: 70px 151px 20px 140px;
   position: relative;
-  background: url('../../img/index.png')no-repeat;
+  background: url('./../img/index.png')no-repeat;
   &__text{
     color: rgba(31, 32, 65, 0.75);
     position: absolute;
