--- a/src/pages/web/main-sign-in/main-sign-in.scss
+++ b/src/pages/web/main-sign-in/main-sign-in.scss
@@ -10,5 +10,5 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: url('../../../img/sign-in.png')no-repeat 50%;
+  background: url('./../../img/sign-in.png')no-repeat 50%;
 }
