--- a/src/components/color-item/color-item.pug
+++ b/src/components/color-item/color-item.pug
@@ -1,7 +1,7 @@
 mixin color-item(options={})
   -
     const {
-      colorName = 'Dark Shade',
+      colorName = '',
       colorCode = '#1F2041',
       backgroundColor = '',
     } = options;
