--- a/src/components/room-search/room-search.pug
+++ b/src/components/room-search/room-search.pug
@@ -3,7 +3,7 @@ mixin room-search(title)
     div.room-search__title=title 
     div.room-search__item 
       include ../calendar/calendar.pug
-      +calendar({isDouble:true})
+      +calendar({isDouble:true, titleFrom:'прибытие', titleTo:'выезд',})
     div.room-search__item 
       include ../drop-down/drop-down.pug
       +drop-down({
@@ -17,7 +17,7 @@ mixin room-search(title)
     div.room-search__item 
       include ../buttons/buttons.pug
       +buttons({
-        modifer:'form',
+        modifier:['form'],
         text:'подобрать номер',
         href:'search-room.html'
       })
