--- a/src/pages/ui-kit/cards/cards.scss
+++ b/src/pages/ui-kit/cards/cards.scss
@@ -4,18 +4,22 @@
 @import '../../../components/price-room/price-room.scss';
 @import '../../../components/sign-in/sign-in.scss';
 @import '../../../components/slide/slide.scss';
+@import '../../../components/calendar/calendar.scss';
 
+body{
+  background: #e5e5e5 url("../../../img/main-logo.svg") no-repeat 30px 30px;
+
+}
 .cards {
   max-width: 1440px;
-  padding: 150px 140px 140px 140px;
-  background: #e5e5e5 url("../../../img/main-logo.svg") no-repeat 30px 30px;
+  padding: 152px 140px 140px 140px;
   display: flex;
   &__left-colum {
     display: flex;
     flex-direction: column;
   }
   &__left-colum-item{
-    margin-bottom: 38px;
+    margin-bottom: 41px;
   }
 
   &__centre-colum {
@@ -25,9 +29,11 @@
   &__centre-colum-item {
     margin-bottom: 38px;
   }
-  &__right-colum {
+  &__right-colum-item {
+    margin-bottom: 70px;
+    &:nth-child(2){
+      margin-bottom: 41px;
+    }
   }
 }
-.cards__right-colum-item {
-  margin-bottom: 40px;
-}
+
