--- a/src/pages/web/room-details/room-details.pug
+++ b/src/pages/web/room-details/room-details.pug
@@ -74,7 +74,9 @@ html
                 "Нельзя с питомцами",
                 "Без вечеринок и мероприятий",
                 "Время прибытия — после 13:00,</br>а выезд до 12:00",
-              ]})
+                ],
+                isRoomDetails:true,
+              })
             div.room-details__regulations-item
               div.room-details__regulations-cancel
                 div.room-details__regulations-cancel-title Отмена
