--- a/src/components/calendar/calendar.pug
+++ b/src/components/calendar/calendar.pug
@@ -3,6 +3,9 @@ mixin calendar(options = {})
     const {
       isDouble = fasle,
       isRange = fasle,
+      title = '',
+      titleFrom = 'date drop dowe',
+      titleTo = 'date drop dowe',
     } = options;
     
     const classDouble = isDouble ? ' js-calendar_double':'';
@@ -10,6 +13,14 @@ mixin calendar(options = {})
 
   section(class='calendar js-calendar'+classDouble+''+classRange)
     div.calendar__wraper
-      input(class="calendar__input js-calendar__input"  type="text" name="date_from" placeholder="ДД.ММ.ГГГГ" readonly=true)
       if(isDouble)
+        div.calendar__items
+          div.calendar__item
+            div.calendar__title=titleFrom
+            input(class="calendar__input js-calendar__input"  type="text" name="date_from" placeholder="ДД.ММ.ГГГГ" readonly=true)
+          div.calendar__item
+            div.calendar__title=titleTo
+            input(class="calendar__input js-calendar__input"  type="text" name="date_from" placeholder="ДД.ММ.ГГГГ" readonly=true)
+      else
+        div.calendar__title=title
         input(class="calendar__input js-calendar__input"  type="text" name="date_from" placeholder="ДД.ММ.ГГГГ" readonly=true)
