--- a/src/components/calendar/calendar.scss
+++ b/src/components/calendar/calendar.scss
@@ -1,12 +1,28 @@
 .calendar {
-  &__wraper{
+  font-size: 12px;
+  &__wraper {
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__title {
+    text-transform: uppercase;
+    font-weight: bold;
+    color: #1F2041;
+    margin-bottom: 3px;
+  }
+  &__items{
     display: flex;
   }
+  &__item{
+    &:nth-child(1){
+      margin-right: 20px;
+    }
+  }
   &__input {
-    color: red;
     border: 1px solid rgba(31, 32, 65, 0.25);
     border-radius: 4px;
-    padding: 9px 0 10px 16px;
+    padding: 8px 0 10px 16px;
     width: 100%;
     font-size: 15px;
     line-height: 24px;
