--- a/src/components/checkbox-list/checkbox-list.scss
+++ b/src/components/checkbox-list/checkbox-list.scss
@@ -9,6 +9,7 @@
     text-transform: uppercase;
     font-weight: bold;
     position: relative;
+    margin-bottom: 16px;
     &::before{
       width: 30px;
       height: 30px;
