--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -1,27 +1,20 @@
-include ../input-form/input-form.pug
-
-mixin footerList(name,text,flag)
-   ul.footer__list=name
-    -for(let i=0;i<text.length;i++)
-      li.footer__list-item
-        a(href="#")!=text[i]
-    if(flag)
-      +input-form({isForm : true})
+include ../footer-navigation/footer-navigation.pug
+include ../subscription/subscription.pug
 
 footer.footer
   div.footer__warp
     div.footer__body
       span.footer__text
-        | Бронирование номеров в лучшем<br>
-        | отеле 2019 года по версии ассоциации<br>
+        | Бронирование номеров в лучшем
+        | отеле 2019 года по версии ассоциации
         | «Отельные взгляды»
       nav.footer__nav
-        +footerList('навигация',['О нас','Новости','Служба поддержки','Услуги'])
-        +footerList('о нас',['О сервисе','Наша команда','Вакансии','Инвесторы'])
-        +footerList('Служба поддержки',['Соглашения','Сообщества','Связь с нами'])
-        +footerList('Подписка',['Получайте специальные<br> предложения и новости сервиса'],true)
+          +footer-navigation({title:'навигация',list:[{text:'О нас'},{text:'Новости'},{text:'Служба поддержки'},{text:'Услуги'}]})
+          +footer-navigation({title:'о нас',list:[{text:'О сервисе'},{text:'Наша команда'},{text:'Вакансии'},{text:'Инвесторы'}]})
+          +footer-navigation({title:'Служба поддержки',list:[{text:'Соглашения'},{text:'Сообщества'},{text:'Связь с нами'}]})
+          +subscription({title:'Подписка',text:'Получайте специальные<br> предложения и новости сервиса'})
     div.footer__icon
-      span.footer__ico-text Copyright © 2018 Toxin отель. Все права зачищены.  
+      span.footer__ico-text Copyright © 2018 Toxin отель. Все права защищены.  
       span.footer__icons
         a(href="https://twitter.com/?lang=ru")
           img(src="./img/footerIcon/t.svg", alt="twitter")   
