--- a/src/components/input-form/input-form.pug
+++ b/src/components/input-form/input-form.pug
@@ -5,11 +5,13 @@ mixin input-form(options = {})
       value = '',
       placeholder = '',
       isForm = false,
+      isFooter = false,
     } = options;
-    const classActive = isActive ? 'input-form_active' : ''
+    const classActive = isActive ? 'input-form_active' : '';
+    const classModification = isFooter ? ' input-form_width-260' : '';
 
   if(isForm)
-    form(action="#" class='input-formEmail') 
+    form(action="#" class='input-formEmail'+classModification) 
       input(class='input-form input-form_email' type="text" placeholder="Email")
       button(class='input-form__email-btn' type="submit")
   else
