--- a/src/components/input-form/input-form.scss
+++ b/src/components/input-form/input-form.scss
@@ -6,14 +6,17 @@
   line-height: 24px;
   color: rgba(31, 32, 65, 0.75);
   width: 100%;
+
   &::placeholder {
     color: rgba(31, 32, 65, 0.25);
     font-size: 14px;
     line-height: 18px;
   }
+
   &:active,&:focus,&:hover {
     border: 1px solid rgba(31, 32, 65, 0.5);
   }
+
   &__email-btn{
     width: 44px;
     height: 44px;
@@ -21,6 +24,9 @@
     position: absolute;
     z-index: 3;
     right: 0px;
+  }
+  &_width-260{
+    max-width: 260px;
   } 
 }
 .input-form_email{
