--- a/src/components/room-search/room-search.scss
+++ b/src/components/room-search/room-search.scss
@@ -5,24 +5,25 @@
 .room-search {
   display: flex;
   flex-direction: column;
-  width: 380px;
+  max-width: 380px;
   border: 1px solid rgba(0, 0, 0, 0.12);
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  padding: 40px 30px 40px 30px ;
+  padding: 38px 30px 28px 29px;
   background-color: #fff;
   &__title {
     font-weight: bold;
     font-size: 24px;
-    margin-bottom: 24px;
+    margin-bottom: 21px;
     line-height: 29px
   }
   &__item{
+    width: 100%;
     &:nth-child(2){
       margin-bottom: 20px;
     }
     &:nth-child(3){
-      margin-bottom: 41px
+      margin-bottom: 33px
     }
   }
 }
