--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -9,12 +9,14 @@
   margin: 0px auto;
   padding: 70px 151px 20px 140px;
   position: relative;
-  background: url('./../img/index.png')no-repeat;
+  background: url('./../img/index.png')0px -71px no-repeat;
   &__text{
     color: rgba(31, 32, 65, 0.75);
     position: absolute;
     right: 135px;
     bottom: 24px;
+    text-align: right;
+    line-height: 24px;
   }
 }
 
