--- a/src/pages/ui-kit/color-and-type/color-and-type.pug
+++ b/src/pages/ui-kit/color-and-type/color-and-type.pug
@@ -16,13 +16,13 @@ html
     section.colors-and-type
       div.colors-and-type__row-color
         include ../../../components/color-item/color-item.pug  
-        +color-item({clorName : 'Dark Shade 100%', backgroundColor : 'darkShade100'})
-        +color-item({clorName : 'Dark Shade 75%', backgroundColor : 'darkShade75'})
-        +color-item({clorName : 'Dark Shade 50%', backgroundColor : 'darkShade50'})
-        +color-item({clorName : 'Dark Shade 25%', backgroundColor : 'darkShade25'})
-        +color-item({clorName : 'Dark Shade 5%', backgroundColor : 'darkShade5'})
-        +color-item({clorName : 'Purple', backgroundColor : 'purple', colorCode : '#BC9CFF'})
-        +color-item({clorName : 'Green', backgroundColor : 'green', colorCode : '#6FCF97'})
+        +color-item({colorName : 'Dark Shade 100%', backgroundColor : 'darkShade100'})
+        +color-item({colorName : 'Dark Shade 75%', backgroundColor : 'darkShade75'})
+        +color-item({colorName : 'Dark Shade 50%', backgroundColor : 'darkShade50'})
+        +color-item({colorName : 'Dark Shade 25%', backgroundColor : 'darkShade25'})
+        +color-item({colorName : 'Dark Shade 5%', backgroundColor : 'darkShade5'})
+        +color-item({colorName : 'Purple', backgroundColor : 'purple', colorCode : '#BC9CFF'})
+        +color-item({colorName : 'Green', backgroundColor : 'green', colorCode : '#6FCF97'})
       div.colors-and-type__row-text
         include ../../../components/color-text/color-text.pug 
         +color-text({title : 'H1', text : 'This one is the sub-section or</br> widget title', size : '24'})
