--- a/src/pages/ui-kit/form-elements/form-elements.pug
+++ b/src/pages/ui-kit/form-elements/form-elements.pug
@@ -25,13 +25,13 @@ html
           div.form-elements__row-input-item
             div.form-elements__row-input-text
               span.form-elements__row-input-title Text Field
-              span.form-elements__row-input-subTitle Hover&nbsp;/&nbsp;Focus
+              span.form-elements__row-input-subTitle='нover / focus'
             include ../../../components/input-form/input-form.pug
             +input-form({isActive : true, value : 'This is pretty awesome'})
           div.form-elements__row-input-item
             include ../../../components/drop-down/drop-down.pug
             +drop-down({ 
-              title : 'drop-down',
+              title : 'dropdown',
               list : [
                 "взрослые",
                 "дети",
@@ -39,42 +39,31 @@ html
               ], 
             })            
           div.form-elements__row-input-item
-            div.form-elements__row-input-text
-              span.form-elements__row-input-title date drop-down11
             include ../../../components/calendar/calendar.pug
-            +calendar()
+            +calendar({title:'masked text filed'})
           div.form-elements__row-input-item
-            div.form-elements__row-input-text
-              span.form-elements__row-input-title date drop-downDuble 
-            +calendar({isDouble:true})
+            +calendar({isDouble:true,title:'date dropdown'})
           div.form-elements__row-input-item
-            div.form-elements__row-input-text
-              span.form-elements__row-input-title date drop-downRange 
-            +calendar({isRange:true})
+            +calendar({isRange:true,title:'filter date dropdown'})
           div.form-elements__row-input-item
             div.form-elements__row-input-text
               span.form-elements__row-input-title subscription text field
             include ../../../components/input-form/input-form.pug
             +input-form({isForm : true})
           div.form-elements__row-input-item
-            div.form-elements__row-input-text
-              span.form-elements__row-input-title drop-down
-              span.form-elements__row-input-subTitle Default
             include ../../../components/drop-down-bed/drop-down-bed.pug
-            +drop-down-bed()
+            +drop-down-bed({title:'dropdown',subTitle:'default'})
           div.form-elements__row-input-item
-            div.form-elements__row-input-text
-              span.form-elements__row-input-title drop-down
-              span.form-elements__row-input-subTitle expanded
             include ../../../components/drop-down-bed/drop-down-bed.pug
-            +drop-down-bed({isOpen : true})
+            +drop-down-bed({isOpen:true,title:'dropdown',subTitle:'expanded'})
           div.form-elements__row-input-item
             include ../../../components/checkbox-list/checkbox-list.pug
-            +checkbox-list()
+            +checkbox-list({title:'expandable checkbox list'})
           div.form-elements__row-input-item
-            +checkbox-list({show:'checkbox-list__items_show',
+            +checkbox-list({
+              title:'expandable checkbox list',
+              show:'checkbox-list__items_show',
               rotate:'checkbox-list__titleBtn_rotate',
-              title:'',
               items : [
                 {text:'Завтрак',flag:false},
                 {text:'Письменный стол',flag:false},
@@ -86,85 +75,97 @@ html
           div.form-elements__row-input-item
             include ../../../components/text-list/text-list.pug
             +comfortList()
-        div.form-elements__row-checkbox
-          div.form-elements__row-checkbox-item
-            +checkbox-list({
-              isList:false,
-              title:'Checkbox Buttons',
-              items : [
-                {text:'Можно курить',flag:false},
-                {text:'Можно с питомцами',flag:true},
-                {text:'Можно пригласить гостей</br> (до 10 человек)',flag:true},
-              ]})
-          div.form-elements__row-checkbox-item
-            include ../../../components/radio-buttons/radio-buttons.pug
-            +radio-buttons({title : 'Radio Buttons'})
-          div.form-elements__row-checkbox-item
-            div.form-elements__row-checkbox-item-title Toggle
-            include ../../../components/toggle/toggle.pug
-            +toggle('Получать спецпредложения',true)
-            +toggle('Получать спецпредложения',false)
-          div.form-elements__row-checkbox-item
-            div.form-elements__row-checkbox-item-title like button
-            include ../../../components/like-button/like-button.pug
-            +like-button({likeCount : 2 })
-          div.form-elements__row-checkbox-item
-            div.form-elements__row-checkbox-item-title rate button
-            include ../../../components/rate-btn/rate-btn.pug
-            +rate-btn({
-              blockNumber: 0,
-              checkedStarIndex: 1,
-            })
-          div.form-elements__row-checkbox-item
-            include ../../../components/drop-down/drop-down.pug
-            +drop-down({
-              isOpen : true, 
-              title : 'drop-down11',
-              list : [
-                "взрослые",
-                "дети",
-                "младенцы",
-              ], 
-            }) 
-          div.form-elements__row-checkbox-item
-            include ../../../components/rich-checkbox-btn/rich-checkbox-btn.pug
-            +rich-checkbox-btn({title:'RICH CHECKBOX BUTTONS'})
-          div.form-elements__row-checkbox-item
-            include ../../../components/commentary/commentary.pug
-            +commentary('Мурад Сарафанов','5 дней назад','Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.','./img/man.png')
-        div.form-elements__row-btn
-          div.form-elements__row-btn-item
-            include ../../../components/range-slider/range-slider.pug
-            +range-slider('Range Slider')
-          div.form-elements__row-btn-item
-            div.form-elements__row-btn-item-title buttons
-            include ../../../components/buttons/buttons.pug
-            +buttons({modifer:'background'})
-          div.form-elements__row-btn-item
-            include ../../../components/buttons/buttons.pug
-            +buttons({modifer:'border'})
-          div.form-elements__row-btn-item
-            include ../../../components/buttons/buttons.pug
-            +buttons()
-          div.form-elements__row-btn-item
-            include ../../../components/buttons/buttons.pug
-            +buttons({modifer:'form',text:'перейти к оплате'})
-          div.form-elements__row-btn-item
-            div.form-elements__row-btn-item-title pagination
-            include ../../../components/pagination/pagination.pug
-            +pagination()
-          div.form-elements__row-btn-item
-            include ../../../components/drop-down/drop-down.pug
-            +drop-down({
-              isOpen : true,
-              title : 'drop-down',
-              list : [
-                "взрослые",
-                "дети",
-                "младенцы",
-              ], 
-            }) 
-          div.form-elements__row-btn-item
-            div.form-elements__row-btn-item-title bullet list
-            include ../../../components/bullet-list/bullet-list.pug
-            +bullet-list('') 
+        div.form-elements__row-general
+          div.form-elements__row-double
+            div.form-elements__row-checkbox
+              div.form-elements__row-checkbox-item
+                +checkbox-list({
+                  isList:false,
+                  title:'Checkbox Buttons',
+                  items : [
+                    {text:'Можно курить',flag:false},
+                    {text:'Можно с питомцами',flag:true},
+                    {text:'Можно пригласить гостей</br> (до 10 человек)',flag:true},
+                  ]})
+              div.form-elements__row-checkbox-item
+                include ../../../components/radio-buttons/radio-buttons.pug
+                +radio-buttons({title : 'Radio Buttons'})
+              div.form-elements__row-checkbox-item
+                div.form-elements__row-checkbox-item-title Toggle
+                include ../../../components/toggle/toggle.pug
+                +toggle('Получать спецпредложения',true)
+                +toggle('Получать спецпредложения',false)
+              div.form-elements__row-checkbox-item
+                div.form-elements__row-checkbox-item-title like button
+                div.form-elements__row-checkbox-item-like-btn
+                  div.form-elements__row-checkbox-item-like-btn-left
+                    include ../../../components/like-button/like-button.pug
+                    +like-button({likeCount : 2 })
+                  div.form-elements__row-checkbox-item-like-btn-left
+                    include ../../../components/like-button/like-button.pug
+                    +like-button({likeCount:13, isClick:true})
+              div.form-elements__row-checkbox-item
+                div.form-elements__row-checkbox-item-title rate button
+                include ../../../components/rate-btn/rate-btn.pug
+                div.form-elements__row-checkbox-item-rate-button
+                  div.form-elements__row-checkbox-item-rate-button-left
+                    +rate-btn({
+                      blockNumber: 0,
+                      checkedStarIndex: 4,
+                    })
+                  div.form-elements__row-checkbox-item-rate-button-right
+                    +rate-btn({
+                      blockNumber: 1,
+                      checkedStarIndex: 5,
+                    })
+              div.form-elements__row-checkbox-item
+                include ../../../components/drop-down/drop-down.pug
+                +drop-down({
+                  isOpen : true, 
+                  title : 'drop-down',
+                  list : [
+                    "взрослые",
+                    "дети",
+                    "младенцы",
+                  ], 
+                }) 
+              div.form-elements__row-checkbox-item
+                include ../../../components/rich-checkbox-btn/rich-checkbox-btn.pug
+                +rich-checkbox-btn({title:'RICH CHECKBOX BUTTONS'})               
+            div.form-elements__row-btn
+              div.form-elements__row-btn-item
+                include ../../../components/range-slider/range-slider.pug
+                +range-slider('Range Slider')
+              div.form-elements__row-btn-item
+                div.form-elements__row-btn-item-title buttons             
+                include ../../../components/buttons/buttons.pug
+                +buttons({modifier:['background']})
+              div.form-elements__row-btn-item             
+                include ../../../components/buttons/buttons.pug
+                +buttons({modifier:['border']})
+              div.form-elements__row-btn-item             
+                include ../../../components/buttons/buttons.pug
+                +buttons()
+              div.form-elements__row-btn-item             
+                include ../../../components/buttons/buttons.pug
+                +buttons({modifier:['form'],text:'перейти к оплате'})
+              div.form-elements__row-btn-item
+                include ../../../components/pagination/pagination.pug
+                +pagination({title:'pagination'})
+              div.form-elements__row-btn-item
+                include ../../../components/drop-down/drop-down.pug
+                +drop-down({
+                  isOpen : true,
+                  title : 'dropdown',
+                  list : [
+                    "взрослые",
+                    "дети",
+                    "младенцы",
+                  ], 
+                }) 
+              div.form-elements__row-btn-item
+              include ../../../components/bullet-list/bullet-list.pug
+              +bullet-list({title:'bullet list '}) 
+          div.form-elements__row-footer
+             include ../../../components/commentary/commentary.pug
+             +commentary('Мурад Сарафанов','5 дней назад','Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.','./img/man.png')
