--- a/src/pages/ui-kit/form-elements/form-elements.scss
+++ b/src/pages/ui-kit/form-elements/form-elements.scss
@@ -27,29 +27,40 @@
   &__row-input {
     display: flex;
     flex-direction: column;
-   
+    width: 320px;
+    margin-right: 126px;
+  }
+  &__row-double{
+    display: flex;
+  }
+  &__row-footer{
+    margin-top: 224px;
   }
   &__row-input-item {
     margin-bottom: 19px;
+    width: 100%;
     &:nth-child(5){
-      margin-top: 21px;
+      margin-top: 22px;
     }
     &:nth-child(6){
       margin-top: 19px;
-      margin-bottom: 25px;
+      margin-bottom: 22px;
+      width: 266px;
     }
     &:nth-child(7){
       margin-top: 19px;
     }
     &:nth-child(8){
       width: 266px;
-      margin-top: 81px;
+      margin-top: 80px;
+      margin-bottom: 20px;
     }
     &:nth-child(9){
       width: 266px;  
     }
     &:nth-child(10){  
       margin-top: 31px;
+      margin-bottom: 6px;
     }
     &:nth-child(11){  
       margin-top: 25px;
@@ -60,24 +71,25 @@
   }
   &__row-input-text {
     display: flex;
+    justify-content: space-between;
     font-size: 12px;
-    line-height: 15px;
     text-transform: uppercase;
-    margin-bottom: 5px;
-    align-items: center;
+    margin-bottom: 3px;
   }
   &__row-input-title {
     font-weight: bold;
-    flex-basis: 100%;
     color: #1f2041;
+    letter-spacing: -0.3px;
   }
   &__row-input-subTitle {
     color: rgba(31, 32, 65, 0.5);
+    line-height: 11px;
+    letter-spacing: -0.3px;
   }
 
   &__row-checkbox {
-    margin-left: 126px;
     position: relative;
+    width: 320px;
   }
  
   &__row-checkbox-item{
@@ -94,10 +106,10 @@
       margin-top: 38px;
     }
     &:nth-child(6){
-      margin-top: 189px;
+      margin-top: 197px;
     }
     &:nth-child(7){
-      margin-top: 101px;
+      margin-top: 99px;
     }
     &:nth-child(8){
       position: absolute;
@@ -108,31 +120,46 @@
     text-transform: uppercase;
     font-weight: bold;
     font-size: 12px;
-    margin-bottom: 14px;
+    margin-bottom: 13px;
     &:nth-child(3){
       color: red;
     }
   }
+  &__row-checkbox-item-like-btn{
+    display: flex;
+  }
+  &__row-checkbox-item-like-btn-left{
+    margin-right: 10px;
+  }
+  &__row-checkbox-item-rate-button {
+    display:flex;
+  }
+  &__row-checkbox-item-rate-button-left {
+   margin-right: 20px;
+  }
   &__row-btn {
     margin-left: 73px;
+    width: 320px;
   }
   &__row-btn-item{
-    width: 320px;
     margin-bottom: 43px;
     &:nth-child(2){
       margin-bottom: 30px;
     }
     &:nth-child(3){
-      margin-bottom: 27px;
+      margin-bottom: 17px;
     }
     &:nth-child(4){
-      margin-bottom: 28px;
+      margin-bottom: 15px;
+    }
+    &:nth-child(5){
+      margin-bottom: 39px;
     }
     &:nth-child(7){
-      margin-top: 229px;
+      margin-top: 231px;
     }
     &:nth-child(8){
-      margin-top: 101px;
+      margin-top: 97px;
     }
   }
   &__row-btn-item-title{
