--- a/src/pages/web/search-room/search-room.scss
+++ b/src/pages/web/search-room/search-room.scss
@@ -3,16 +3,18 @@
 @import '../../../components/drop-down/drop-down.scss';
 @import '../../../components/checkbox-list/checkbox-list.scss';
 @import '../../../components/rich-checkbox-btn/rich-checkbox-btn.scss';
+@import '../../../components/range-slider/range-slider.scss';
 @import '../../../components/drop-down-bed/drop-down-bed.scss';
 @import '../../../components/slide/slide.scss';
 @import '../../../components/pagination/pagination.scss';
 @import '../../../components/footer/footer.scss';
+@import '../../../components/calendar/calendar.scss';
 
 .search-room {
   max-width: 1440px;
   margin: 0px auto;
   &__row {
-    padding: 32px 0px 0px 140px;
+    padding: 30px 0px 0px 140px;
     display: flex;
     margin-bottom: 74px;
     position: relative;
@@ -30,9 +32,18 @@
     width: 266px;
   }
   &__row-left-item {
-    margin-bottom: 31px;
+    margin-bottom: 29px;
     &:nth-child(1) {
       margin-bottom: 20px;
+    }
+    &:nth-child(3) {
+      margin-bottom: 57px;
+    }
+    &:nth-child(4) {
+      margin-bottom: 31px;
+    }
+    &:nth-child(5) {
+      margin-bottom: 31px;
     }
     &:nth-child(6) {
       margin-bottom: 27px;
@@ -59,6 +70,6 @@
     display: flex;
     justify-content: center;
     margin-right: 155px;
-    margin-top: 25px;
+    margin-top: 8px;
   }
 }
